--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "@sapphire/decorators": "^6.0.4",
     "@sapphire/discord.js-utilities": "7.1.6",
     "@sapphire/framework": "^5.0.7",
+    "@sapphire/plugin-api": "^6.1.1",
     "@sapphire/plugin-logger": "^4.0.2",
     "@sapphire/plugin-subcommands": "^6.0.3",
     "@sapphire/utilities": "^3.15.3",
     "@skyra/env-utilities": "^1.3.0",
     "cheerio": "1.0.0-rc.12",
     "colorette": "^2.0.20",
+    "discord-api-types": "0.37.x",
     "discord.js": "^14.14.1",
     "mongoose": "^8.1.2",
+    "nuxt": "^3.10.2",
     "puppeteer": "^22.0.0",
     "redis": "^4.6.13",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "vue": "^3.4.19",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@sapphire/cli": "^1.9.3",
@@ -40,7 +45,9 @@
     "start": "node dist/index.js",
     "dev": "npm run build && npm run start",
     "watch:start": "tsc-watch --onSuccess \"npm run start\"",
-    "format": "prettier --write \"src/\""
+    "format": "prettier --write \"src/\"",
+    "web:dev": "cd web && npm run dev",
+    "web:build": "cd web && npm run build"
   },
   "prettier": "@sapphire/prettier-config"
 }
